--- a/source/style.scss
+++ b/source/style.scss
@@ -705,7 +705,7 @@ body{
             padding-left: 90px;
         }
         &__contacts {
-            min-width: none;
+            min-width: 0;
         }
     }
 }
