--- a/css/style.css
+++ b/css/style.css
@@ -974,7 +974,7 @@ body {
     padding-left: 90px;
   }
   .footer__contacts {
-    min-width: none;
+    min-width: 0;
   }
 }
 @media (max-width: 570px) {
